--- a/Test/Test/GoogleMap/map.html
+++ b/Test/Test/GoogleMap/map.html
@@ -41,17 +41,17 @@
             }
 
         </style>
-    <script src="jquery-1.11.3.min.js"></script>
-    <link rel="stylesheet" href="jquery.mobile-1.4.5.min.css">
-    <script src="jquery.mobile-1.4.5.min.js"></script>
+    <script src="jquery/jquery-1.11.3.min.js"></script>
+    <link rel="stylesheet" href="jquery/jquery.mobile-1.4.5.min.css">
+    <script src="jquery/jquery.mobile-1.4.5.min.js"></script>
     <link rel="stylesheet" href="map.css">
     <script src="map.js"></script>
 </head>
 <body>
     <div id="header" data-role="header">
 
-        <div id="backdiv" style="float: left;"><img src='btn_back.png' id="img_back"></div>
-        <div id="submitdiv" style="float: right;"><img src='btn_submit.png' id="img_submit" ></div>
+        <div id="backdiv" style="float: left;"><img src='img/btn_back.png' id="img_back"></div>
+        <div id="submitdiv" style="float: right;"><img src='img/btn_submit.png' id="img_submit" ></div>
 
         <div id="searchdiv">
         <!-- <ul id="search" data-inset="true" data-filter="true" data-corners="true" data-filter-placeholder="搜索附近位置..."></ul> -->
