--- a/Test/Test/GoogleMap/travel.html
+++ b/Test/Test/GoogleMap/travel.html
@@ -104,7 +104,7 @@
 </head>
 <body>
     <div id="header" data-role="header">
-        <div id="backdiv" style="float: left;"><img src='btn_back.png' id="img_back"></div>
+        <div id="backdiv" style="float: left;"><img src='img/btn_back.png' id="img_back"></div>
         <div id="searchdiv">行程路线</div>
     </div>
 
@@ -202,7 +202,7 @@
                 var pos = path[i];
                 var marker = new google.maps.Marker({
                   position: pos,
-                  icon: 'ico_location.png',
+                  icon: 'img/ico_location.png',
                   map: map,
                   idx : i
                 });
@@ -243,7 +243,7 @@
                     '<H3 class="posaddr">' + pos.addr + '</H3>' +
                     '<div class="dist">' + (usrLocaleState != 1 ? 'Unknown' : getDistance(_pos, pos)) + '</div>' +
                 '</div>' +
-                '<div class="swipebottom"><img class="calcway" src="p.png" alt="' + pos.addr + '" onclick="wayTo(' + pos.lat + "," + pos.lng + ')"></div>' +
+                '<div class="swipebottom"><img class="calcway" src="img/p.png" alt="' + pos.addr + '" onclick="wayTo(' + pos.lat + "," + pos.lng + ')"></div>' +
                 '</div></swipe-item>');
         }
         content += '</swipe>';
