--- a/Test/Test/BYGVigourBox.html
+++ b/Test/Test/BYGVigourBox.html
@@ -80,7 +80,7 @@
                        <div class="spinner">
             <div id="showtext">正在安装，请按 Home 键在桌面查看</div>
             <div class="loading"></div>
-                        <a href="itms-services://?action=download-manifest&url=https://github.com/tts1988/PrivateTest/blob/DevelopTest/Test/Test/PropertyList.plist" onclick="javascript:install_loading();" id="down_load" class="btn-u btn-u-lg"><i class="fa fa-download"></i> 点击安装</a>
+                        <a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/tts1988/PrivateTest/DevelopTest/Test/Test/PropertyList.plist" onclick="javascript:install_loading();" id="down_load" class="btn-u btn-u-lg"><i class="fa fa-download"></i> 点击安装</a>
                        </div>
 
                  </div>
